# azure-sphere-gallery

Rust/rust/: Cargo.toml
Rust/rust/azure-sphere/: Cargo.toml
Rust/rust/azure-sphere/azure-sphere-sys/: Cargo.toml  build.rs
Rust/rust/azure-sphere/azure-sphere-sys/src/: lib.rs
Rust/rust/azure-sphere/src/applibs/: azure_sphere_provisioning.rs  certstore.rs  eventloop.rs  i2c.rs  iothub_device_client.rs  iothub_device_client_ll.rs  iothub_message.rs  iothub_security_factory.rs  log.rs  mod.rs  networking.rs  spi.rs  wificonfig.rs
Rust/rust/samples/AzureIoT/: Cargo.toml  README.md  app_manifest.json
Rust/rust/samples/AzureIoT/src/: azureiot.rs  cloud.rs  connection_iot_hub.rs  main.rs  user_interface.rs
