[package]
name = "azureiot"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2018"

[dependencies]
azure-sphere = { path = "../../azure-sphere", version = "0.1" }
signal-hook = "0.3.15"
hardware = { path = "../../hardware"}
chrono = { version = "0.4.24" }

[profile.dev]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = "abort"