[package]
name = "azureiot"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2018"

[dependencies]
azure-sphere = { path = "../../azure-sphere", version = "0.1" }
hardware = { path = "../../hardware"}
chrono = { version = "0.4.24" , default-features = false, features = ["std"] }
signal-hook-registry = { version = "1.4.1" }
serde_json = "1.0.97"

[profile.dev]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = "abort"